--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+<link rel="stylesheet" href="test.css">
 
 <body>
 
@@ -18,6 +19,14 @@
     <source srcset="flowers.jpg">
     <img src="images/21032487_1241309209308512_3850808109551969394_n.jpg" alt="Flowers">
   </picture>
-</body>
+
+  .container
+  img(src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/221808/sky.jpg").background
+  p.message all your dreams can come true<br>if you have the courage to pursue them
+  - for (i = 1; i <= 100; i++) .circle-container .circle each i in ['purple','medium-blue','light-blue', 'red'
+    , 'orange' , 'yellow' , 'cyan' , 'light-green' , 'lime' , 'magenta' , 'lightish-red' , 'pink' ] div(class=i) </body>
+
+
+
 
 </html>
