--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <link rel="stylesheet" href="test.css">
-<link rel="stylesheet" href="scprit.js">
+
 
 <body>
 
@@ -22,6 +22,16 @@
       <div class="background"></div>
       <div class="foreground"></div>
     </main>
+
+    <main>
+      <img class="img img-01" src="https://i.imgur.com/2SE5Ysz.png" alt="">
+      <img class="img img-02" src="https://i.imgur.com/re3Rw11.jpg" alt="">
+
+      <div class="credit">
+        <p>Photo by <a target="_blank" href="https://unsplash.com/@aiony">Aiony Haust</a></p>
+      </div>
+    </main>
+
 
 </body>
 
